--- a/lista.html
+++ b/lista.html
@@ -18,5 +18,7 @@
             <li><input type="checkbox">Tomar Café</li>
         </ul>
     </div>
+
+    <script src="assets/js/todo.js"></script>
 </body>
 </html>
