Percorrendo Array com ForEach

--- a/lista.html
+++ b/lista.html
@@ -9,14 +9,10 @@
 </head>
 <body>
     <div class="content-center">
-        
+
         <h1>Lista de Tarefas</h1>
-        <ul class="todo">
-            <li><input type="checkbox">Estudar JS</li>
-            <li class="complete"><input type="checkbox">Estudar ReactJS</li>
-            <li><input type="checkbox">Seja ativo na DevUp Academy</li>
-            <li><input type="checkbox">Tomar Café</li>
-        </ul>
+        <ul class="todo"></ul>
+        
     </div>
 
     <script src="assets/js/todo.js"></script>
