--- a/lista.html
+++ b/lista.html
@@ -11,8 +11,9 @@
     <div class="content-center">
 
         <h1>Lista de Tarefas</h1>
+        <input type="text" id="new-task" placeholder="Adicone uma tarefa">
         <ul class="todo"></ul>
-        
+
     </div>
 
     <script src="assets/js/todo.js"></script>
