--- a/lista.html
+++ b/lista.html
@@ -11,7 +11,7 @@
     <div class="content-center">
 
         <h1>Lista de Tarefas</h1>
-        <input type="text" id="new-task" placeholder="Adicone uma tarefa">
+        <input type="text" id="new-task" placeholder="Adicione uma tarefa 📌">
         <ul class="todo"></ul>
 
     </div>
