--- a/lista.html
+++ b/lista.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Todo List</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <div class="content-center">
 
-        <h1>Lista de Tarefas</h1>
+        <h1><i class="fas fa-tasks"></i> Lista de Tarefas </h1>
         <input type="text" id="new-task" placeholder="Adicione uma tarefa 📌">
         <ul class="todo"></ul>
 
